--- a/webapp/src/app/pacman-features/modules/admin/create-rule/create-rule.component.css
+++ b/webapp/src/app/pacman-features/modules/admin/create-rule/create-rule.component.css
@@ -167,7 +167,7 @@ input.inputarea-container {
 ul.input-wrapper {
   border: 1px solid #aaa;
   border-radius: 0.3em;
-  background-color: #fff;
+  background-color: var(--background-white);
   padding: 0.6em;
   padding-top: 0.1em;
   padding-bottom: 0.1em;
@@ -215,7 +215,7 @@ ul.input-wrapper {
 }
 
 .data-table-head-outer {
-  background-color: #fff;
+  background-color: var(--background-white);
   left: 0;
   width: 100%;
   min-height: 1.7em;
@@ -238,7 +238,7 @@ ul.input-wrapper {
   position: relative;
   min-width: calc(100%);
   left: 0;
-  background-color: #fff;
+  background-color: var(--background-white);
   z-index: 1;
   bottom: 0;
   width: -webkit-fit-content;
@@ -319,7 +319,7 @@ ul.input-wrapper {
 }
 
 .data-table-paginator-wrap {
-  background-color: #fff;
+  background-color: var(--background-white);
   width: 100%;
   height: 4.66em;
   border-top: solid 1.5px #efefef;
@@ -565,7 +565,7 @@ p.inputnote {
   height: 18px;
   border: 1px solid #333;
   border-radius: 100%;
-  background: #fff;
+  background-color: var(--background-white);
 }
 
 [type="radio"]:checked + label:after,
@@ -609,7 +609,7 @@ button.tmbutton {
   padding: 0 10px 0 10px;
   height: 30px;
   border-radius: 7px;
-  background-color: #fff;
+  background-color: var(--background-white);
   border: solid 2px var(--primary-400);
   font-size: 13px;
   font-weight: 600;
@@ -635,7 +635,7 @@ button.tmbutton:disabled {
 }
 
 button.tmbutton:disabled:hover {
-  background-color: #fff;
+  background-color: var(--background-white);
   box-shadow: none;
 }
 
