--- a/webapp/src/app/post-login-app/know-your-dashboard/know-your-dashboard.component.css
+++ b/webapp/src/app/post-login-app/know-your-dashboard/know-your-dashboard.component.css
@@ -14,7 +14,7 @@
 
 .first-time-container {
   z-index: 14;
-  background: #fff;
+  background-color: var(--background-white);
   margin: auto;
   top: 50%;
   left: 50%;
