--- a/webapp/src/app/pacman-features/modules/admin/asset-groups/create-asset-groups/create-asset-groups.component.css
+++ b/webapp/src/app/pacman-features/modules/admin/asset-groups/create-asset-groups/create-asset-groups.component.css
@@ -148,7 +148,7 @@ input.inputarea-container {
 .textarea-container {
   border: 1px solid #aaa;
   border-radius: 0.3em;
-  background-color: #fff;
+  background-color: var(--background-white);
   padding: 0.8em;
   width: 100%;
   height: 9em;
@@ -157,7 +157,7 @@ input.inputarea-container {
 ul.input-wrapper {
   border: 1px solid #aaa;
   border-radius: 0.3em;
-  background-color: #fff;
+  background-color: var(--background-white);
   padding: 0.6em;
   padding-top: 0.1em;
   padding-bottom: 0.1em;
@@ -241,7 +241,7 @@ ul.input-wrapper {
   position: relative;
   min-width: 100%;
   left: 0;
-  background-color: #fff;
+  background-color: var(--background-white);
   z-index: 1;
   bottom: 0;
   width: fit-content;
@@ -328,7 +328,7 @@ ul.input-wrapper {
 }
 
 .data-table-paginator-wrap {
-  background-color: #fff;
+  background-color: var(--background-white);
   width: 100%;
   height: 4.66em;
   border-top: solid 1.5px #efefef;
@@ -552,7 +552,7 @@ button.tmbutton {
   padding: 0 10px 0 10px;
   height: 2.5em;
   border-radius: 7px;
-  background-color: #fff;
+  background-color: var(--background-white);
   border: solid 2px var(--primary-400);
   font-size: 13px;
   font-weight: 600;
@@ -578,7 +578,7 @@ button.tmbutton:disabled {
 }
 
 button.tmbutton:disabled:hover {
-  background-color: #fff;
+  background-color: var(--background-white);
   box-shadow: none;
 }
 
@@ -1584,7 +1584,7 @@ button.attrbutton {
   width: auto;
   height: 18px;
   border-radius: 4px;
-  background-color: #fff;
+  background-color: var(--background-white);
   border: solid 1px var(--primary-400);
   font-size: 11px;
   font-weight: 600;
@@ -1605,7 +1605,7 @@ button.attrbutton:hover {
 
 button.attrbutton:disabled {
   cursor: not-allowed !important;
-  background-color: #fff;
+  background-color: var(--background-white);
   border: solid 1px var(--primary-300);
   color: var(--primary-300);
   box-shadow: none;
@@ -1613,7 +1613,7 @@ button.attrbutton:disabled {
 
 button.attrbutton:disabled:hover {
   cursor: not-allowed !important;
-  background-color: #fff;
+  background-color: var(--background-white);
   border: solid 1px var(--primary-300);
   color: var(--primary-300) !important;
   box-shadow: none;
