--- a/webapp/src/app/pacman-features/modules/admin/asset-groups/domains/create-update-domain/create-update-domain.component.css
+++ b/webapp/src/app/pacman-features/modules/admin/asset-groups/domains/create-update-domain/create-update-domain.component.css
@@ -52,7 +52,7 @@ input.inputarea-container {
 .textarea-container {
   border: 1px solid #aaa;
   border-radius: 0.3em;
-  background-color: #fff;
+  background-color: var(--background-white);
   padding: 0.8em;
   width: 100%;
   height: 9em;
@@ -61,7 +61,7 @@ input.inputarea-container {
 ul.input-wrapper {
   border: 1px solid #aaa;
   border-radius: 0.3em;
-  background-color: #fff;
+  background-color: var(--background-white);
   padding: 0.6em;
   padding-top: 0.1em;
   padding-bottom: 0.1em;
@@ -101,7 +101,7 @@ ul.input-wrapper {
   color: var(--primary-400);
 }
 .data-table-paginator-wrap {
-  background-color: #fff;
+  background-color: var(--background-white);
   width: 100%;
   height: 4.66em;
   border-top: solid 1.5px #efefef;
