--- a/webapp/src/app/pacman-features/modules/admin/config-management/config-management.component.css
+++ b/webapp/src/app/pacman-features/modules/admin/config-management/config-management.component.css
@@ -27,7 +27,7 @@
   overflow: hidden;
   margin: 0 1.8em 2em;
   height: 100%;
-  background: #fff;
+  background-color: var(--background-white);
 }
 
 .filter-header {
@@ -468,7 +468,7 @@ table {
   min-height: 1em;
   font-size: 0.9em;
   border-radius: 7px;
-  background-color: #fff;
+  background-color: var(--background-white);
   color: #e20774;
   padding: 0.6em 2em;
 }
@@ -503,7 +503,7 @@ table {
 .textarea-container {
   border: 1px solid #aaa;
   border-radius: 0.3em;
-  background-color: #fff;
+  background-color: var(--background-white);
   padding: 0.5em;
   width: 100%;
   height: 100%;
