--- a/webapp/src/app/pacman-features/modules/admin/sticky-exceptions/create-sticky-exceptions/create-sticky-exceptions.component.css
+++ b/webapp/src/app/pacman-features/modules/admin/sticky-exceptions/create-sticky-exceptions/create-sticky-exceptions.component.css
@@ -150,7 +150,7 @@ input.inputarea-container {
 .textarea-container {
   border: 1px solid #aaa;
   border-radius: 0.3em;
-  background-color: #fff;
+  background-color: var(--background-white);
   padding: 0.8em;
   width: 100%;
   height: 9em;
@@ -159,7 +159,7 @@ input.inputarea-container {
 ul.input-wrapper {
   border: 1px solid #aaa;
   border-radius: 0.3em;
-  background-color: #fff;
+  background-color: var(--background-white);
   padding: 0.6em;
   padding-top: 0.1em;
   padding-bottom: 0.1em;
@@ -220,7 +220,7 @@ ul.input-wrapper {
 }
 
 .data-table-head-outer {
-  background-color: #fff;
+  background-color: var(--background-white);
   left: 0;
   width: 100%;
   min-height: 1.7em;
@@ -245,7 +245,7 @@ ul.input-wrapper {
   position: relative;
   min-width: 100%;
   left: 0;
-  background-color: #fff;
+  background-color: var(--background-white);
   z-index: 1;
   bottom: 0;
   width: fit-content;
@@ -336,7 +336,7 @@ ul.input-wrapper {
 }
 
 .data-table-paginator-wrap {
-  background-color: #fff;
+  background-color: var(--background-white);
   width: 100%;
   height: 4.66em;
   border-top: solid 1.5px #efefef;
@@ -469,7 +469,7 @@ button.tmbutton {
   padding: 0 10px 0 10px;
   height: 30px;
   border-radius: 7px;
-  background-color: #fff;
+  background-color: var(--background-white);
   border: solid 2px var(--primary-400);
   font-size: 13px;
   font-weight: 600;
@@ -495,7 +495,7 @@ button.tmbutton:disabled {
 }
 
 button.tmbutton:disabled:hover {
-  background-color: #fff;
+  background-color: var(--background-white);
   box-shadow: none;
 }
 
@@ -1353,7 +1353,7 @@ button.attrbutton {
   width: auto;
   height: 18px;
   border-radius: 4px;
-  background-color: #fff;
+  background-color: var(--background-white);
   border: solid 1px var(--primary-400);
   font-size: 11px;
   font-weight: 600;
