--- a/webapp/src/app/pacman-features/modules/compliance/issue-details/issue-details.component.css
+++ b/webapp/src/app/pacman-features/modules/compliance/issue-details/issue-details.component.css
@@ -406,7 +406,7 @@ app-issue-blocks {
 }
 
 .button-textarea:hover {
-  background-color: #fff;
+  background-color: var(--background-white);
   color: var(--primary-500);
   border: 1px solid #aaa;
   box-shadow: 0 2px 0.25em 0 rgba(16, 16, 16, 0.5);
@@ -594,7 +594,7 @@ input.inputarea-container {
 .input-wrapper {
   border: 1px solid #aaa;
   border-radius: 0.3em;
-  background-color: #fff;
+  background-color: var(--background-white);
   padding: 0.3em;
 }
 
@@ -619,7 +619,7 @@ li.list-inputs:hover {
 
 .suggestions {
   position: absolute;
-  background-color: #fff;
+  background-color: var(--background-white);
   border: 1px solid #aaa;
   width: 100%;
   border-radius: 0.2em;
