--- a/webapp/src/app/pacman-features/secondary-components/onprem-patching-graph/onprem-patching-graph.component.css
+++ b/webapp/src/app/pacman-features/secondary-components/onprem-patching-graph/onprem-patching-graph.component.css
@@ -144,7 +144,7 @@
 
 .patched.patch-target {
   height: 3px;
-  background: #fff;
+  background-color: var(--background-white);
   width: 2em;
   border: 0px solid #ededed;
   border-bottom: 3px dashed #00b972;
@@ -253,7 +253,7 @@
 
 .onprem-graph-wrap /deep/ .app-button {
   border-radius: 0px !important;
-  background-color: #fff !important;
+  background-color: var(--background-white) !important;
   color: var(--primary-500) !important;
   display: flex !important;
   padding: 0.2em 0em !important;
@@ -265,7 +265,7 @@
 }
 
 .onprem-graph-wrap /deep/ .app-button:hover {
-  background-color: #fff !important;
+  background-color: var(--background-white) !important;
   box-shadow: none !important;
   text-shadow: 1px 0 !important;
 }
