--- a/webapp/src/app/post-login-app/common/post-login-header/post-login-header.component.css
+++ b/webapp/src/app/post-login-app/common/post-login-header/post-login-header.component.css
@@ -12,380 +12,380 @@
  * limitations under the License.
  */
 
- .post-login-header-wrapper {
-    font-size: 1em;
-    padding-top: 1em;
-    /* height: 4em; */
-    white-space: nowrap;
-    position: relative;
-    z-index: 14;
+.post-login-header-wrapper {
+  font-size: 1em;
+  padding-top: 1em;
+  /* height: 4em; */
+  white-space: nowrap;
+  position: relative;
+  z-index: 14;
 }
 
 .header-left {
-    padding-left: 2.805%;
-    flex: 1;
-    padding-bottom: 1em;
-    padding-right: 1em;
+  padding-left: 2.805%;
+  flex: 1;
+  padding-bottom: 1em;
+  padding-right: 1em;
 }
 
 .header-right {
-    padding-right: 3%;
-    z-index: 5;
-    padding-bottom: 1em;
-    flex: 1;
-    justify-content: flex-end;
-    margin-left: 1.5em;
+  padding-right: 3%;
+  z-index: 5;
+  padding-bottom: 1em;
+  flex: 1;
+  justify-content: flex-end;
+  margin-left: 1.5em;
 }
 
 .header-right img {
-    transition: 0.2s ease;
+  transition: 0.2s ease;
 }
 
 .header-right img:hover {
-    transform: scale(1.2);
+  transform: scale(1.2);
 }
 
 .pacman-logo {
-    width: 40px;
-    margin-bottom: 2.2em;
+  width: 40px;
+  margin-bottom: 2.2em;
 }
 
 nav .nav-icon:last-child {
-    margin-right: 0em;
+  margin-right: 0em;
 }
 
 .mr-burger-menu {
-    font-size: 2.5em;
-    color: #ffffff;
-    vertical-align: middle;
-    cursor: pointer;
-    transform-style: preserve-3d;
-    transition: 0.2s ease;
+  font-size: 2.5em;
+  color: #ffffff;
+  vertical-align: middle;
+  cursor: pointer;
+  transform-style: preserve-3d;
+  transition: 0.2s ease;
 }
 
 .burger-container {
-    height: 2.5em;
-    cursor: pointer;
-    display: inline-block;
-    opacity: 0.99;
+  height: 2.5em;
+  cursor: pointer;
+  display: inline-block;
+  opacity: 0.99;
 }
 
 .burger-container:hover .mr-burger-menu {
-    transform: rotateX(180deg);
+  transform: rotateX(180deg);
 }
-
 
 /* user options dropdown  */
 
 .header-user-image {
-    position: relative;
-    flex: 1;
+  position: relative;
+  flex: 1;
 }
 
 .burger-wrap {
-    flex: 1;
+  flex: 1;
 }
 
 .user-options {
-    position: absolute;
-    top: 150%;
-    transform: translateX(10px);
-    -webkit-transition: all 0.5s;
-    transition: all 0.5s;
-    opacity: 1;
-    white-space: nowrap;
-    right: 0;
+  position: absolute;
+  top: 150%;
+  transform: translateX(10px);
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
+  opacity: 1;
+  white-space: nowrap;
+  right: 0;
 }
 
 .user-option.visible {
-    opacity: 1;
+  opacity: 1;
 }
 
 .username {
-    font-family: var(--text-light-font-family);
-    font-size: 1.1em;
-    color: #ffffff;
-    padding: 0 5px 0 0;
+  font-family: var(--text-light-font-family);
+  font-size: 1.1em;
+  color: #ffffff;
+  padding: 0 5px 0 0;
 }
 
 .pacman-menu {
-    display: flex;
-    flex-direction: column;
-    position: fixed;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    opacity: 0.98;
-    background-color: #424850;
-    box-shadow: 4px 0 18px 0 #000000bd;
-    min-width: 40em;
-    z-index: 31;
-    transition: 0.3s ease;
-    transform: translateX(-101%);
-    padding: 4.8em 4em 3.4em;
-    color: #fff;
+  display: flex;
+  flex-direction: column;
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  opacity: 0.98;
+  background-color: #424850;
+  box-shadow: 4px 0 18px 0 #000000bd;
+  min-width: 40em;
+  z-index: 31;
+  transition: 0.3s ease;
+  transform: translateX(-101%);
+  padding: 4.8em 4em 3.4em;
+  color: #fff;
 }
 
 .pacman-menu.active {
-    transform: translateX(0%);
+  transform: translateX(0%);
 }
 
 .close-img {
-    right: 2.5em;
-    height: 2.8em;
-    top: 1em;
-    transition: 0.3s ease;
-    cursor: pointer;
+  right: 2.5em;
+  height: 2.8em;
+  top: 1em;
+  transition: 0.3s ease;
+  cursor: pointer;
 }
 
 .close-img:hover {
-    transform: rotate(-90deg);
+  transform: rotate(-90deg);
 }
 
 .menu-container {
-    width: 50%;
-    padding-bottom: 20px;
+  width: 50%;
+  padding-bottom: 20px;
 }
 
 .menu-head-container {
-    min-width: 9em;
-    padding: 0.45em 0;
-    position: relative;
+  min-width: 9em;
+  padding: 0.45em 0;
+  position: relative;
 }
 
 .menu-head {
-    text-transform: uppercase;
-    font-family: var(--text-medium-font-family);
-    padding-left: 0.83em;
+  text-transform: uppercase;
+  font-family: var(--text-medium-font-family);
+  padding-left: 0.83em;
 }
 
 .menu-content {
-    display: flex;
-    margin-bottom: 2.5em;
-    flex-direction: column;
-    flex-wrap: wrap;
-    overflow-x: auto;
+  display: flex;
+  margin-bottom: 2.5em;
+  flex-direction: column;
+  flex-wrap: wrap;
+  overflow-x: auto;
 }
 
 .menu-underline {
-    width: 10em;
-    border-bottom: 1.5px solid #c3cbd7;
-    position: absolute;
-    bottom: 0;
-    left: 0;
+  width: 10em;
+  border-bottom: 1.5px solid #c3cbd7;
+  position: absolute;
+  bottom: 0;
+  left: 0;
 }
 
 .menu-content-item {
-    padding: calc(19em / (2 * 12)) 0;
-    opacity: 0.75;
-    transition: 0.2s ease;
-    cursor: pointer;
-    display: flex;
+  padding: calc(19em / (2 * 12)) 0;
+  opacity: 0.75;
+  transition: 0.2s ease;
+  cursor: pointer;
+  display: flex;
 }
 
 .menu-content-item:hover {
-    opacity: 1;
-    letter-spacing: 0.3px;
+  opacity: 1;
+  letter-spacing: 0.3px;
 }
 
 .menu-content-item.active {
-    font-family: var(--text-medium-font-family);
-    opacity: 1;
+  font-family: var(--text-medium-font-family);
+  opacity: 1;
 }
 
 .menu-footer {
-    margin-top: auto;
+  margin-top: auto;
 }
 
 .menu-content .menu-container img {
-    transform-origin: bottom;
-    opacity: 0.7;
-    transition: 0.3s ease;
+  transform-origin: bottom;
+  opacity: 0.7;
+  transition: 0.3s ease;
 }
 
 .menu-content .menu-container:hover img {
-    transform: scale(1.15);
-    opacity: 1;
+  transform: scale(1.15);
+  opacity: 1;
 }
 
 .menu-footer .menu-container img {
-    transform-origin: bottom;
-    opacity: 0.7;
-    transition: 0.3s ease;
+  transform-origin: bottom;
+  opacity: 0.7;
+  transition: 0.3s ease;
 }
 
 .menu-footer .menu-container:hover img {
-    transform: scale(1.15);
-    opacity: 1;
+  transform: scale(1.15);
+  opacity: 1;
 }
 
 .pacman-version {
-    position: absolute;
-    top: 10px;
-    left: 50%;
-    -webkit-transform: translateX(-50%);
-    transform: translateX(-50%);
-    font-family: var(--text-light-font-family);
-    font-size: 1em;
-    color: #999999;
+  position: absolute;
+  top: 10px;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+  transform: translateX(-50%);
+  font-family: var(--text-light-font-family);
+  font-size: 1em;
+  color: #999999;
 }
 
 .header-top-section {
-    background: rgb(90, 97, 107);
-    padding: 0.6em 2.805%;
-    position: relative;
-    height: 50px;
-    z-index: 15;
-    box-shadow: 0 0px 4px 1px rgba(0,0,0,0.2);
+  background: rgb(90, 97, 107);
+  padding: 0.6em 2.805%;
+  position: relative;
+  height: 50px;
+  z-index: 15;
+  box-shadow: 0 0px 4px 1px rgba(0, 0, 0, 0.2);
 }
 
 .recently-viewed-wrap {
-    border: 1px solid #7a7a7a;
-    border-radius: 5px;
-    padding: .4em 1em .5em;
-    font-size: 1em;
-    user-select: none;
-    width: 17em;
-    align-self: stretch;
-    background: #f3f3f3;
-    margin-left: 1em;
-    color: #333;
-    visibility: hidden;
-    position: relative;
-    z-index: 30;
-    opacity: 0;
-    transition: 0.3s ease;
+  border: 1px solid #7a7a7a;
+  border-radius: 5px;
+  padding: 0.4em 1em 0.5em;
+  font-size: 1em;
+  user-select: none;
+  width: 17em;
+  align-self: stretch;
+  background: #f3f3f3;
+  margin-left: 1em;
+  color: #333;
+  visibility: hidden;
+  position: relative;
+  z-index: 30;
+  opacity: 0;
+  transition: 0.3s ease;
 }
 
 .show-recents.recently-viewed-wrap {
-    visibility: visible;
-    opacity: 1;
+  visibility: visible;
+  opacity: 1;
 }
 
 .recently-viewed-list {
-    bottom: -1px;
-    left: 0;
-    right: 0;
-    transform: translateY(100%);
-    background: #fff;
-    box-shadow: 0 2px 5px 0px rgba(0,0,0,0.2);
-    border-radius: var(--border-radius);
-    max-height: 0px;
-    overflow: hidden;
-    transition: 0.6s ease;
-    transition-delay: 0.1s;
+  bottom: -1px;
+  left: 0;
+  right: 0;
+  transform: translateY(100%);
+  background-color: var(--background-white);
+  box-shadow: 0 2px 5px 0px rgba(0, 0, 0, 0.2);
+  border-radius: var(--border-radius);
+  max-height: 0px;
+  overflow: hidden;
+  transition: 0.6s ease;
+  transition-delay: 0.1s;
 }
 
 .show-recents.recently-viewed-wrap .recently-viewed-list {
-    max-height: 100vh;
+  max-height: 100vh;
 }
 
 .each-recent {
-    padding: .66em 1em;
-    font-size: 1.15em;
-    border-bottom: 1px solid #ededed;
-    white-space: normal;
-    line-height: 1.3;
-    text-transform: capitalize;
-    cursor: pointer;
+  padding: 0.66em 1em;
+  font-size: 1.15em;
+  border-bottom: 1px solid #ededed;
+  white-space: normal;
+  line-height: 1.3;
+  text-transform: capitalize;
+  cursor: pointer;
 }
 
 .view-more-list {
-    padding: 0.9em 1em;
-    font-size: 1em;
-    color: #fff;
-    background: var(--primary-400);
-    font-family: var(--text-medium-font-family);
-    text-align: center;
-    border-radius: 2px;
-    cursor: pointer;
+  padding: 0.9em 1em;
+  font-size: 1em;
+  color: #fff;
+  background: var(--primary-400);
+  font-family: var(--text-medium-font-family);
+  text-align: center;
+  border-radius: 2px;
+  cursor: pointer;
 }
 
 .each-recent:hover {
-    background: #f7f7f7;
+  background: #f7f7f7;
 }
 
 .asset-group-selection {
-    transition: 0.2s ease;
+  transition: 0.2s ease;
 }
 
 .asset-group-selection:hover {
-    background: rgba(0, 0, 0, 0.1);
+  background: rgba(0, 0, 0, 0.1);
 }
 
-.asset-group-selection.active:hover, .asset-group-selection.active {
-    background: rgba(0, 0, 0, 0.2);
+.asset-group-selection.active:hover,
+.asset-group-selection.active {
+  background: rgba(0, 0, 0, 0.2);
 }
 
 .overlay-bg {
-    position: fixed;
-    z-index: 14;
-    height: 100vh;
-    width: 100vw;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background: rgba(0, 0, 0, 0.3);
+  position: fixed;
+  z-index: 14;
+  height: 100vh;
+  width: 100vw;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.3);
 }
 
 .nav-holder {
-    overflow-x: auto;
-    overflow-x: overlay;
-    overflow-y: hidden;
-    min-width: 15em;
-    position: relative;
+  overflow-x: auto;
+  overflow-x: overlay;
+  overflow-y: hidden;
+  min-width: 15em;
+  position: relative;
 }
 
 .nav-holder::-webkit-scrollbar {
-    max-width: 7px;
-    background-color: transparent;
-    max-height: 7px;
-    transition: 0.28s ease;
+  max-width: 7px;
+  background-color: transparent;
+  max-height: 7px;
+  transition: 0.28s ease;
 }
 
 .nav-holder::-webkit-scrollbar-button {
-    /* 2 */
-    background-color: transparent;
-    display: none;
+  /* 2 */
+  background-color: transparent;
+  display: none;
 }
 
 .nav-holder::-webkit-scrollbar-track {
-    /* 3 */
-    background-color: transparent;
+  /* 3 */
+  background-color: transparent;
 }
 
 .nav-holder::-webkit-scrollbar-track-piece {
-    /* 4 */
-    background-color: transparent;
+  /* 4 */
+  background-color: transparent;
 }
 
 .nav-holder::-webkit-scrollbar-thumb {
-    /* 5 */
-    width: 7px;
-    background-color: #b0b0b0;
-    border-radius: 4px;
+  /* 5 */
+  width: 7px;
+  background-color: #b0b0b0;
+  border-radius: 4px;
 }
 
 .nav-holder::-webkit-scrollbar-corner {
-    /* 6 */
-    display: none;
-    background-color: transparent;
+  /* 6 */
+  display: none;
+  background-color: transparent;
 }
 
 .nav-holder::-webkit-resizer {
-    display: none;
-    background-color: transparent;
+  display: none;
+  background-color: transparent;
 }
 
 .profile {
-    border-radius: 33px;
-    transition: all .2s ease-in-out;
+  border-radius: 33px;
+  transition: all 0.2s ease-in-out;
 }
 
 .user-profile-wrapper:hover > .profile {
-    transform: scale(1.2);
+  transform: scale(1.2);
 }
 .cloud-icon-wrapper {
-    padding-right: .6em;
+  padding-right: 0.6em;
 }
