--- a/webapp/src/app/post-login-app/common/vuln-trend-graph/vuln-trend-graph.component.css
+++ b/webapp/src/app/post-login-app/common/vuln-trend-graph/vuln-trend-graph.component.css
@@ -334,7 +334,7 @@
   right: 0;
   bottom: 0;
   margin: auto;
-  background: #fff;
+  background-color: var(--background-white);
   border-radius: var(--border-radius);
   box-shadow: 0px 0px 6px 2px rgba(0, 0, 0, 0.2);
   max-width: 740px;
