--- a/webapp/src/app/shared/input-modal/input-modal.component.css
+++ b/webapp/src/app/shared/input-modal/input-modal.component.css
@@ -26,7 +26,7 @@
   padding: 2em;
   max-width: 50em;
   max-height: 40em;
-  background: #fff;
+  background-color: var(--background-white);
   z-index: 30;
   border-radius: 4px;
   box-shadow: 0px 0px 4px 1px rgba(0, 0, 0, 0.2);
