--- a/webapp/src/app/shared/table-list/table-list.component.css
+++ b/webapp/src/app/shared/table-list/table-list.component.css
@@ -53,7 +53,7 @@
 
 .table-body {
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.15);
-  background: #fff;
+  background-color: var(--background-white);
 }
 .table-body td {
   padding: 1.1em;
@@ -82,7 +82,7 @@
 .expand-element {
   box-shadow: 0px 2px 3px 0 rgba(0, 0, 0, 0.15);
   border-top: 1px solid #d6e2f1;
-  background: #fff;
+  background-color: var(--background-white);
   transition: 0.8s;
 }
 
