--- a/webapp/src/styles.css
+++ b/webapp/src/styles.css
@@ -771,7 +771,7 @@ input:-webkit-autofill {
 }
 
 .floating-widgets-section {
-  width: 71%;
+  width: 75%;
   height: 100%;
 }
 
@@ -853,7 +853,7 @@ input:-webkit-autofill {
   height: 100%;
   flex-direction: column;
   align-items: center;
-  background: #fff;
+  background-color: var(--background-white);
   box-shadow: 0 1px 7px -1px #0000001e, 0 2px 4px 0 #00000023;
   margin-top: 2px;
 }
@@ -1162,7 +1162,7 @@ body {
   top: 0;
   justify-content: flex-start;
   align-items: center;
-  background: #fff;
+  background-color: var(--background-white);
   color: #555;
   width: 100%;
   font-size: 1em;
@@ -1180,7 +1180,7 @@ body {
   bottom: 0;
   justify-content: flex-end;
   align-items: center;
-  background: #fff;
+  background-color: var(--background-white);
   color: #555;
   width: 100%;
   font-size: 1em;
@@ -1565,7 +1565,7 @@ input.common-cb + label {
   width: 18px;
   height: 18px;
   border-radius: 3px;
-  background: #fff;
+  background-color: var(--background-white);
   position: relative;
   display: flex;
   align-items: center;
@@ -1733,7 +1733,7 @@ img.trend-img-holder {
   transform: translate(-100%, -50%);
   min-width: 135px;
   min-height: 100px;
-  background: #fff;
+  background-color: var(--background-white);
   border-radius: var(--border-radius);
   box-shadow: 0 0 4px 1px rgba(0, 0, 0, 0.2);
   z-index: 3;
