fix: height changes to screens

--- a/webapp/src/app/pacman-features/modules/omnisearch/omni-search-page/omni-search-page.component.css
+++ b/webapp/src/app/pacman-features/modules/omnisearch/omni-search-page/omni-search-page.component.css
@@ -14,20 +14,20 @@
 
 .search-wrapper {
   height: 100%;
-  
 }
 .search-center-container {
-  background-size: cover; 
+  background-size: cover;
   height: 100%;
   background-color: var(--background-grey);
 }
 
-.search-center-container /deep/ ngx-select-dropdown, .search-center-container /deep/ .ngx-dropdown-container {
+.search-center-container /deep/ ngx-select-dropdown,
+.search-center-container /deep/ .ngx-dropdown-container {
   height: 100%;
 }
 .search-center-container /deep/ .ngx-dropdown-button {
   height: 100%;
-  border:none !important;
+  border: none !important;
   border-top-right-radius: 0px !important;
   border-bottom-right-radius: 0px !important;
 }
